--- a/www/index.html
+++ b/www/index.html
@@ -14,7 +14,7 @@
       <h1 class="heading">Search demo page</h1>
       <div class="search" data-hook="search">
         <input type="text" data-hook="search-input" class="search__input" placeholder="Search ..." />
-        <span class="search__input-loader" style="display:none"></span>
+        <span class="search__input-loader" data-hook="search-loader" style="display:none"></span>
       </div>
       <div class="article">
         <h2 class="article__title" data-hook="article-title"></h2>
